propose loan, prepare loan service
